===============================================================================
Changes for faraday
===============================================================================


DONE:
********* version 1.05.11 (20528)
4/3/08 - change method of rescaling the B-field visualization [490]
4/2/08 - change faraday.description
********* version 1.05.10 (20509)
4/2/08 - organize imports
4/2/08 - fix bounds problem in AbstractBFieldGraphic, needed to call setBoundsDirty when grid bounds change [351]
4/2/08 - remove AbstractBFieldGraphic.setRescalingEnabled and getRescalingEnabled, not useful, we always rescale
4/2/08 - rename CompassGridGraphic to AbstractBFieldGraphic
4/2/08 - change terminology in CompassGridGraphic, use "grid points" instead of "needle descriptors"
4/2/08 - convert CompassNeedleCache to use strategy pattern for colors
4/1/08 - create BFieldInsideGraphic, field grid inside the magnet that moves with the magnet [351]
4/1/08 - create BFieldOutsideGraphic, a specialization of CompassGridGraphic that fills the play area [351]
4/1/08 - generalize CompassGridGraphic so that it can be used for the bar magnet's internal B-field display [351]
4/1/08 - visually inspect all AbstractMagnet.getStrength calls to make sure that having zero magnet strength won't cause problems [435]
4/1/08 - fix divide-by-zero problem in Dipole.getStrengthOutside that occurs when one of the poles is on the point of interest [492]
********* version 1.05.09 (20482)
4/1/08 - change screenshot for magnet-and-compass, turn off field meter [442]
4/1/08 - create screenshots for new faraday sims [442]
4/1/08 - change Earth transparency from 0.65 to 0.75 [443]
4/1/08 - put Earth in top-most layer, in front of magnet, compass and field meter [443]
4/1/08 - change lightbulb min alpha=0.35 and light glow scale=15 throughout [488]
********* version 1.05.08 (20467)
3/31/08 - make Earth image smaller to match Kathy's mockup [443]